Fix GitHub Pages routing - set base href to root
- Changed baseHref from '/portfolio/' to '/' in angular.json
- Updated 404.html to use root base href
- Modified SPA redirect script to work with root deployment
- This should fix the issue where README was showing at root URL

--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
-  <base href="/portfolio/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Product+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     // Single Page Apps for GitHub Pages
     // https://github.com/rafgraph/spa-github-pages
     // Start single page app redirect
-    var pathSegmentsToKeep = 1;
+    var pathSegmentsToKeep = 0;
     var l = window.location;
     l.replace(
       l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
